--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "react": "16.6.3",
-    "react-native": "0.57.8"
+    "react-native": "0.57.8",
+    "react-navigation": "^2.18.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
